oops, fixed status align

--- a/chromium/pages/popup/popup_extend.css
+++ b/chromium/pages/popup/popup_extend.css
@@ -21,6 +21,7 @@
 }
 
 .full > #menu > div::before {
+    display: inline-block;
     margin-left: 10%;
     width: 45%;
 }
